--- a/index.html
+++ b/index.html
@@ -1,5 +1,44 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Varun Kosuru Portfolio</title>
+</head>
 <body>
-My Landing page.
+    <header>
+        <button clss="nav_toggle" aria-label="toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="nav">
+            <ul class="nav_list">
+                <li class="nav_item"><a href="#home" class="nav_link">Home</a></li>
+                <li class="nav_item"><a href="#about" class="nav_link">About</a></li>
+                <li class="nav_item"><a href="#mywork" class="nav_link">My Work</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Introduction -->
+    <section class="introduction" id="home">
+        <h1 class="section_title">
+            Hi, I am <strong>Varun Kosuru</strong>
+        </h1>
+        <p class="section_subtitle">Software Engineer</p>
+    </section>
+
+    <!-- About -->
+    <section class="about_me" id="about">
+        <h2 class="section_title">Who I am?</h2>
+        <div class="about_me_body">
+            <p></p>
+        </div>
+    </section>
+
+    <!-- My work -->
+    <section class="mywork" id="mywork">
+        <h2 class="section_title">My work</h2>
+    </section>
+    
 </body>
-<html>
+</html>
