CSS placeholder & updates to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Varun Kosuru Portfolio</title>
 </head>
 <body>
@@ -39,6 +40,14 @@
     <section class="mywork" id="mywork">
         <h2 class="section_title">My work</h2>
     </section>
+
+    <!-- Footer-->
+    <a href="mailto:kosuruvarunkumar@gmail.com" class="footer_link">kosuruvarunkumar@gmail.com</a>
+    <ul class="social_list">
+        <li class="social_list_item" ><a href="" class="social_list_link">a</a></li>
+        <li class="social_list_item" ><a href="" class="social_list_link">b</a></li>
+        <li class="social_list_item" ><a href="" class="social_list_link">c</a></li>
+    </ul>
     
 </body>
 </html>
