commented footer section

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     </section>
 
     <!-- Footer-->
-    <a href="mailto:kosuruvarunkumar@gmail.com" class="footer_link">kosuruvarunkumar@gmail.com</a>
+    <!-- <a href="mailto:kosuruvarunkumar@gmail.com" class="footer_link">kosuruvarunkumar@gmail.com</a>
     <ul class="social_list">
         <li class="social_list_item" ><a href="" class="social_list_link">a</a></li>
         <li class="social_list_item" ><a href="" class="social_list_link">b</a></li>
         <li class="social_list_item" ><a href="" class="social_list_link">c</a></li>
-    </ul>
+    </ul> -->
     
 </body>
 </html>
